Fixing uneven icon sizes in Safari and Chrome

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -261,7 +261,7 @@ a.sidebar-nav-item:focus {
     font-size: 1.2rem;
     font-weight: 500;
     text-decoration: none;
-    width: 6rem;
+    width: 3rem;
 }
 
 .social {
